Make sure navigation is accessible on small screens

--- a/_scss/components/_menu.scss
+++ b/_scss/components/_menu.scss
@@ -73,9 +73,10 @@
 @include phone() {
   .menu__content {
     @include stretch(fixed);
+    @include overflow(y);
 
     display: none;
-    padding: 48px $layout-inset;
+    padding: 80px $layout-inset;
 
     background-color: rgba($color-palette-secondary, 0.9);
     -webkit-backdrop-filter: blur(5px);
@@ -99,12 +100,6 @@
       width: 50px;
       font-size: 14px;
       line-height: 0.9;
-    }
-
-    .navigation {
-      position: relative;
-      top: 50%;
-      transform: translateY(-50%);
     }
 
     .navigation__link {
